--- a/Shared/Resources/en.lproj/Localizable.strings
+++ b/Shared/Resources/en.lproj/Localizable.strings
@@ -8,3 +8,11 @@
 // MARK: - SessionDriverList
 "session_driver_list.error.text" = "Something went wrong";
 "session_driver_list.error.cta" = "Refresh";
+
+// MARK: - LiveCardCell
+"live_card_cell.title.now" = "HAPPENING NOW";
+"live_card_cell.title.soon" = "HAPPENING SOON";
+"live_card_cell.top.round" = "Round %@";
+"live_card_cell.about_to_start" = "About to start";
+"live_card_cell.time.hours" = "HOURS";
+"live_card_cell.time.minutes" = "MINUTES left";
