spacings and event status

--- a/Shared/Resources/en.lproj/Localizable.strings
+++ b/Shared/Resources/en.lproj/Localizable.strings
@@ -1,9 +1,7 @@
-"grand_prix_card.title" = "Monza 2023";
-
 // MARK: - GrandPrixCard
 
 "grand_prix_card.top.round" = "Round %@";
-"grand_prix_card.label.live" = "LIVE";
+"grand_prix_card.label.time" = "in %@";
 
 // MARK: - SessionDriverList
 "session_driver_list.error.text" = "Something went wrong";
@@ -16,3 +14,12 @@
 "live_card_cell.about_to_start" = "About to start";
 "live_card_cell.time.hours" = "HOURS";
 "live_card_cell.time.minutes" = "MINUTES left";
+
+// MARK: - SeasonListView
+"season_list_view.navigation.title" = "Season 2023";
+
+
+// MARK: - UpcomingAndStandingsCell
+"upcoming_and_standings_cell.segment.upcoming" = "Upcoming";
+"upcoming_and_standings_cell.segment.past" = "Past";
+"upcoming_and_standings_cell.standings.title" = "Current Standings";
