--- a/Shared/Resources/en.lproj/Localizable.strings
+++ b/Shared/Resources/en.lproj/Localizable.strings
@@ -13,7 +13,9 @@
 "live_card_cell.top.round" = "Round %@";
 "live_card_cell.about_to_start" = "About to start";
 "live_card_cell.time.hours" = "HOURS";
-"live_card_cell.time.minutes" = "MINUTES left";
+"live_card_cell.time.minutes" = "MINUTES";
+"live_card_cell.time.seconds" = "SECONDS";
+"live_card_cell.time.left" = "left";
 
 // MARK: - SeasonListView
 "season_list_view.navigation.title" = "Season 2023";
