Improvements based on CR comments

--- a/Shared/Resources/en.lproj/Localizable.strings
+++ b/Shared/Resources/en.lproj/Localizable.strings
@@ -38,3 +38,9 @@
 // MARK: - SessionTime
 "session_time.today" = "Today at %@";
 "session_time.tomorrow" = "Tomorrow at %@";
+
+// MARK: - Podium
+"podium.ordinal_component" = "%@.";
+
+// MARK: - Session
+"session.screen_title" = "Sessions";
