--- a/Shared/Resources/en.lproj/Localizable.strings
+++ b/Shared/Resources/en.lproj/Localizable.strings
@@ -13,9 +13,15 @@
 "live_card_cell.top.round" = "Round %@";
 "live_card_cell.about_to_start" = "About to Start";
 "live_card_cell.time.hours" = "HOURS";
+"live_card_cell.time.hour" = "HOUR";
 "live_card_cell.time.minutes" = "MINUTES";
+"live_card_cell.time.minute" = "MINUTE";
 "live_card_cell.time.seconds" = "SECONDS";
 "live_card_cell.time.left" = "left";
+"live_card_cell.to" = "TO";
+
+// MARK: - FinishedCard
+"finished_card_cell.finished" = "FINISHED";
 
 // MARK: - SeasonListView
 "season_list_view.navigation.title" = "Season 2023";
@@ -25,3 +31,16 @@
 "upcoming_and_standings_cell.segment.upcoming" = "Upcoming";
 "upcoming_and_standings_cell.segment.past" = "Past";
 "upcoming_and_standings_cell.standings.title" = "Current Standings";
+
+// MARK: - FinishedSessionCell
+"finished_session_cell.winner" = "Winner:";
+
+// MARK: - SessionTime
+"session_time.today" = "Today at %@";
+"session_time.tomorrow" = "Tomorrow at %@";
+
+// MARK: - Podium
+"podium.ordinal_component" = "%@.";
+
+// MARK: - Session
+"session.screen_title" = "Sessions";
