--- a/Shared/Resources/en.lproj/Localizable.strings
+++ b/Shared/Resources/en.lproj/Localizable.strings
@@ -96,3 +96,13 @@
 // MARK: - NewsListView
 "news_list_view.screen_title" = "News";
 "news_list_view.source_label" = "Source: fia.com";
+
+// MARK: - SettingsView
+"settings.screen_title" = "Settings";
+"settings.purchase_premium_button_title" = "Purchase Premium";
+"settings.notifications_section_title" = "Notifications";
+"settings.premium_section_title" = "Premium";
+"settings.notification_label.session_start" = "Session Start";
+"settings.notification_label.session_end" = "Session End";
+"settings.notification_label.latest_news" = "Latest News";
+
