--- a/Slipstream Watch App/Resources/en.lproj/Localizable.strings
+++ b/Slipstream Watch App/Resources/en.lproj/Localizable.strings
@@ -82,7 +82,7 @@
 // MARK: - InAppPurchaseView
 "in_app_purchase_view.title" = "Slipstream Premium";
 "in_app_purchase_view.body" = "Unlock full access navigate the app freely for more news content and driver info.";
-"in_app_purchase_view.body.loading" = "We are loading your amazing subscription. Thanks for trusting us!";
+"in_app_purchase_view.body.loading" = "We are loading your subscription. Thanks for trusting us!";
 "in_app_purchase_view.body.success" = "Thanks for trusting us! We hope you enjoy your subscription.";
 "in_app_purchase_view.body.error" = "Something went wrong. Please try again to access all live information and get more exclusive content.";
 "in_app_purchase_view.button.restore" = "Restore Purchases";
@@ -112,4 +112,9 @@
 "notifications.labels.latest_news" = "Latest News";
 "notifications.labels.session_start" = "Session Start";
 "notifications.labels.session_end" = "Session End";
+
+// MARK: - Error
+"error_button.try_again" = "Try again";
+
+
 
